// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "default_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.autoFocus: true - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": true,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.autoFocus: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": false,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.bordered: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.disabled: true - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": true,
      "id": "properties.disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label align: right - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label align: right_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label colon: false - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label colon: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label disabled: true - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label disabled: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label extra: showing extra - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label extra: showing extra_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label inline: true - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label inline: true_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.label span: 12 - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.label span: 12_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.placeholder: Type your text here - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.placeholder: Type your text here_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": "Type your text here",
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: large - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: large_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": "large",
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.size: small - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.size: small_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": "small",
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title: My PasswordInput Title - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.title: My PasswordInput Title_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.visibilityToggle: false - value[0] - PasswordInput 1`] = `
Array [
  Array [
    Object {
      "autoFocus": undefined,
      "bordered": undefined,
      "className": "{}",
      "disabled": undefined,
      "id": "properties.visibilityToggle: false_input",
      "onChange": [Function],
      "onPressEnter": [Function],
      "placeholder": undefined,
      "size": undefined,
      "value": null,
      "visibilityToggle": false,
    },
    Object {},
  ],
]
`;
